--- a/app/views/user/swaps/_swap_profile.html.haml
+++ b/app/views/user/swaps/_swap_profile.html.haml
@@ -16,6 +16,9 @@
         Recommendations for
         = other_user.constituency.name
       = render :partial => 'recommendations/party_recommendation', :collection => recommendations, :as => :rec
+      .recommendations-header
+        Polls Advice
+      = render :partial => 'user/swaps/polls_advice', locals: { constituency: other_user.constituency, party: other_user.willing_party }
 - if defined? link_to_swap and link_to_swap
   .d-flex.justify-content-center
     = link_to "Offer to swap", new_user_swap_path(user_id: other_user.id), class: "btn btn-secondary"
