--- a/app/views/user/swaps/_polls_advice.html.haml
+++ b/app/views/user/swaps/_polls_advice.html.haml
@@ -2,17 +2,17 @@
 %p
   - if poll.marginal_score < 1000
     - lead_trail = poll.signed_marginal_score.positive? ? "leading"  : "only trailing the leading party"
-    &#10071 Check the poll chart, looks like your swap could make a difference for #{party.name}, which is
+    &#10071 Looks like your swap could make a difference for #{party.name}, which is
     = lead_trail
     by
     = poll.marginal_score/100.0
     percent in the polls
   - elsif poll.signed_marginal_score.positive?
-    Check the poll chart, looks like your swap may be supporting a safe win for #{party.name} which is already leading by
+    Looks like your swap may be supporting a safe win for #{party.name} which is already leading by
     = poll.marginal_score/100.0
     percent in the pools
   - else
-    Check the poll chart, #{party.name} is trailing by
+    #{party.name} is trailing by
     = poll.marginal_score/100.0
     percent in the polls and may still lose despite your swap
 
