issue-816: move selection of poll to caller
to allow bypass for NI (no polls)

--- a/app/views/user/swaps/_swap_profile.html.haml
+++ b/app/views/user/swaps/_swap_profile.html.haml
@@ -8,18 +8,21 @@
     drawPollChart("poll_#{other_user.id}", #{poll_data});
 - unless other_user.constituency.nil?
   - recommendations = fullest_recommendations_for(other_user.constituency, other_user.willing_party)
-  - if recommendations.size > 0
+  - poll = other_user.constituency.polls.detect { |poll| poll.party_id == other_user.willing_party.id }
+  - if recommendations.size > 0 || !poll.nil?
     %h6.text-center.mt-2
       Does this help your vote count ?
-    .profile-recommendations.text-center.smv-card
-      .recommendations-header
-        Polls Interpretation
-      = render :partial => 'user/swaps/polls_advice', locals: { constituency: other_user.constituency, party: other_user.willing_party }
-    .profile-recommendations.text-center.smv-card
-      .recommendations-header
-        Recommendations for
-        = other_user.constituency.name
-      = render :partial => 'recommendations/party_recommendation', :collection => recommendations, :as => :rec
+    - unless poll.nil?
+      .profile-recommendations.text-center.smv-card
+        .recommendations-header
+          Polls Interpretation
+        = render :partial => 'user/swaps/polls_advice', locals: { poll: poll, party: other_user.willing_party }
+    - if recommendations.size > 0
+      .profile-recommendations.text-center.smv-card
+        .recommendations-header
+          Recommendations for
+          = other_user.constituency.name
+        = render :partial => 'recommendations/party_recommendation', :collection => recommendations, :as => :rec
 - if defined? link_to_swap and link_to_swap
   .d-flex.justify-content-center
     = link_to "Offer to swap", new_user_swap_path(user_id: other_user.id), class: "btn btn-secondary"
