--- a/app/views/user/swaps/_polls_advice.html.haml
+++ b/app/views/user/swaps/_polls_advice.html.haml
@@ -1,18 +1,17 @@
-- poll = constituency.polls.detect { |poll| poll.party_id == party.id }
 %p
   - if poll.marginal_score < 1000
     - lead_trail = poll.signed_marginal_score.positive? ? "leading"  : "only trailing the leading party"
-    &#10071 Looks like your swap could make a difference for #{party.name}, which is
+    &#10071 Looks like this swap could make a difference for #{party.name}, which is
     = lead_trail
     by
     = poll.marginal_score/100.0
     percent in the polls
   - elsif poll.signed_marginal_score.positive?
-    Looks like your swap may be supporting a safe win for #{party.name} which is already leading by
+    Looks like this swap may be supporting a safe win for #{party.name} which is already leading by
     = poll.marginal_score/100.0
     percent in the pools
   - else
     #{party.name} is trailing by
     = poll.marginal_score/100.0
-    percent in the polls and may still lose despite your swap
+    percent in the polls and may still lose despite this swap
 
